# HacPack

./: .gitignore  CMakeLists.txt  LICENSE  README.md  hacpack_builder.cpp  hacpack_builder.h  hacpack_builder_file.cpp  hacpack_builder_file.h  hacpack_core.cpp  hacpack_core.h  hacpack_format.h  hacpack_writer_file.cpp  hacpack_writer_vector.cpp  main.cpp  pack_reader.h  pack_reader_index.cpp  pack_reader_io.cpp  pack_reader_io.h  测试说明.md
docs/: HacPack_V2_Plugin_Refactor_Design.md
plugins/: crc32_plugin_reader.cpp  crc32_plugin_reader.h  crc32_plugin_writer.cpp  crc32_plugin_writer.h  namelist_plugin_reader.cpp  namelist_plugin_reader.h  namelist_plugin_writer.cpp  namelist_plugin_writer.h  plugin_registry_reader.cpp  plugin_registry_reader.h  plugin_registry_writer.cpp  plugin_registry_writer.h
tests/: pack_compare_source.cmake  pack_unpack_compare_source.cmake
